fixes card overlapping

--- a/src/sass/_template.scss
+++ b/src/sass/_template.scss
@@ -132,12 +132,9 @@
 }
 
 .sidebar-attribute{
-  @extend .-sidebar;
-  z-index: 100;
-  background: #F3F3F2;
+  @extend .generic-sidebar;
   color: #555555;
   font-size: 16px;
-  width: 375px;
 
   .header{
     background: linear-gradient(96.69deg, #4BA0C4 0%, #12BDBA 99.09%);
